<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/menu_new_visualization"
        android:title="@string/menu_new_visualization"
        android:showAsAction="always"
        android:icon="@drawable/new_visualization"/>
    
    <item
        android:id="@+id/menu_sync"
        android:title="@string/menu_sync"/>
        
    <item
        android:id="@+id/menu_user_detail"
        android:title="@string/menu_user_detail"/>
    
    <item
        android:id="@+id/menu_help"
        android:title="@string/menu_help"/>
    
    <item
        android:id="@+id/menu_terms_and_activity"
        android:title="@string/menu_terms_and_conditions"/>
    
    <item
        android:id="@+id/menu_about"
        android:title="@string/menu_about"/>
    
</menu>
